[package]
name = "armstrong"
version = "0.1.0"
authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Artistic-2.0"
repository = "https://github.com/passcod/armstrong"
edition = "2018"
# readme = "README.md"

[badges]
travis-ci = { repository = "passcod/armstrong" }
maintenance = { status = "actively-developed" }

[workspace]
members = ["rpc-macro", "rpc-macro-support"]

[dependencies]
arc-swap = "0.3.6"
byteorder = "1.2.7"
crossbeam-channel = "0.3.6"
env_logger = "0.6.0"
hostname = "0.1.5"
ipnet = "2.0.0"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc" }
jsonrpc-macros = { git = "https://github.com/paritytech/jsonrpc" }
lazy_static = "1.2.0"
log = "0.4.6"
num_cpus = "1.9.0"
ocl-core = "0.10.0"
rpds = "0.5.0"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"
systemstat = "0.1.3"
url = "1.7.2"
ws = "0.7.9"

[dependencies.uuid]
version = "0.7.1"
features = ["serde"]

[dependencies.rpc-macro]
path = "./rpc-macro"

[dependencies.rpc-macro-support]
path = "./rpc-macro-support"
